# fastapi1

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b0eb4a8003b6_.py  b4934dc6cb60_.py
api/: courses.py  sections.py  users.py
api/utils/: users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: user.py
