[tool.poetry]
name = "fastapi1"
version = "0.1.0"
description = ""
authors = ["Izazur Rahman Shafin <shafin97@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
